collects/tests/xml/clark-tests/valid/not-sa/020.ent
<!ENTITY % e "doc">
<!ELEMENT doc (#PCDATA)>
<!ATTLIST%e;a1 CDATA "v1">
