collects/tests/xml/clark-tests/invalid/003.ent
<!ENTITY % e "<!ELEMENT ">
%e; doc (#PCDATA)>
